examples/test/testpolicy9379.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9379
  namespace: namespace270
spec:
  podSelector:
    matchLabels:
      key42: value41
      key17: value38
      key45: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value20
      podSelector:
        matchLabels:
          key16: value16
